<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/light_green"
    tools:context=".ui.onboarding.OnboardingStartFragment">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="120dp"
        android:fontFamily="@font/montserrat_bold"
        android:text="@string/welcome_to_the_taskman"
        android:textColor="@color/white"
        android:textSize="28sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/montserrat"
        android:text="@string/app_name"
        android:textColor="@color/white"
        android:textSize="28sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />
    <TextView
        android:id="@+id/textView3"
        android:layout_width="280dp"
        android:layout_height="wrap_content"
        android:fontFamily="@font/montserrat"
        android:text="@string/explore_the_app_let_s_manage_your_tasks_with_taskman"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:layout_marginTop="15dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/typingGuy"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:lottie_rawRes="@raw/typing_guy"
        app:lottie_loop="true"
        app:lottie_autoPlay="true"
        android:layout_marginBottom="55dp"
        app:layout_constraintTop_toBottomOf="@+id/textView3"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/btnGetStarted"
        />

    <com.google.android.material.button.MaterialButton
        style="@style/Widget.MaterialComponents.Button"
        android:id="@+id/btnGetStarted"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:textSize="16sp"
        android:layout_marginHorizontal="35dp"
        android:text="@string/get_started"
        app:cornerRadius="35dp"
        android:backgroundTint="@color/white"
        android:textColor="@color/green"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="55dp"
        />



</androidx.constraintlayout.widget.ConstraintLayout>