<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.onboarding.OnboardingFinishFragment"
    android:background="@color/cream">

    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/artist"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:lottie_rawRes="@raw/artist"
        app:lottie_loop="true"
        app:lottie_autoPlay="true"
        android:layout_marginVertical="35dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/textView"
        />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/what_are_what_we_do"
        android:fontFamily="@font/poppins_medium"
        android:textSize="22sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/textView2"/>

    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/we_increase_your_productivity_while_protecting_you_from_forgetfulness_at_work_and_in_daily_life"
        android:textAlignment="center"
        android:fontFamily="@font/poppins"
        android:textSize="16sp"
        android:layout_marginHorizontal="35dp"
        app:layout_constraintBottom_toTopOf="@id/btnLogin"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>




    <com.google.android.material.button.MaterialButton
        style="@style/Widget.MaterialComponents.Button"
        android:id="@+id/btnLogin"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:textSize="16sp"
        android:layout_marginHorizontal="35dp"
        android:text="@string/start"
        android:fontFamily="@font/poppins"
        app:cornerRadius="35dp"
        android:backgroundTint="@color/green"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginTop="25dp"
        android:layout_marginBottom="55dp"
        />




</androidx.constraintlayout.widget.ConstraintLayout>