<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/topBar"
        android:layout_width="match_parent"
        android:layout_height="64dp"
        android:background="@color/cream"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/btnGoBack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:padding="16dp"
            android:src="@drawable/ic_baseline_arrow_back_ios_24"
            app:layout_constraintBottom_toBottomOf="@+id/tvHomeName"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/tvHomeName" />

        <TextView
            android:id="@+id/tvHomeName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:fontFamily="@font/montserrat"
            android:text="@string/profile"
            android:textAlignment="center"
            android:textSize="24sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/topBar">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center_horizontal"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:orientation="vertical"
                android:paddingTop="16dp"
                android:background="@color/cream">
            <androidx.cardview.widget.CardView
                android:id="@+id/view2"
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:layout_marginBottom="8dp"
                android:elevation="12dp"
                app:cardCornerRadius="60dp"
                android:layout_gravity="center">

                <ImageView
                    android:id="@+id/ivProfile"
                    android:layout_width="match_parent"
                    android:layout_height="120dp"
                    android:scaleType="centerCrop" />
            </androidx.cardview.widget.CardView>

            <TextView
                android:id="@+id/tvUsername"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/montserrat"
                android:gravity="center"
                android:text="@string/username"
                android:textColor="@color/black"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/tvEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/montserrat"
                android:gravity="center"
                android:text="@string/example_example_com"
                android:textSize="16sp"
                android:layout_marginBottom="16dp"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginHorizontal="16dp"
                android:paddingBottom="64dp">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/general"
                android:gravity="center"
                android:textSize="16sp"
                android:layout_marginTop="16dp"
                android:fontFamily="@font/montserrat"/>


            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/md_grey_400" />

            <LinearLayout
                android:id="@+id/btnBuyMeCoffee"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingHorizontal="24dp"
                android:paddingVertical="4dp"
                android:background="@drawable/btn_bg_selector">

                <ImageView
                    android:layout_width="32dp"
                    android:layout_height="32dp"
                    android:layout_margin="8dp"
                    android:src="@drawable/ic_coffee"
                    />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/buy_me_a_coffee"
                    android:layout_gravity="center_vertical"
                    android:textColor="@color/black"
                    android:textSize="16sp"
                    android:fontFamily="@font/montserrat"
                    android:paddingStart="8dp"/>

            </LinearLayout>
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/md_grey_400"/>
            <LinearLayout
                android:id="@+id/btnSendEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingHorizontal="24dp"
                android:paddingVertical="4dp"
                android:background="@drawable/btn_bg_selector">

                <ImageView
                    android:layout_width="32dp"
                    android:layout_height="32dp"
                    android:layout_margin="8dp"
                    android:src="@drawable/ic_mail"
                    />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/send_us_an_e_mail"
                    android:layout_gravity="center_vertical"
                    android:textColor="@color/black"
                    android:textSize="16sp"
                    android:fontFamily="@font/montserrat"
                    android:paddingStart="8dp"/>

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/md_grey_400" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/account"
                android:gravity="center"
                android:textSize="16sp"
                android:layout_marginTop="32dp"
                android:fontFamily="@font/montserrat"/>
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/md_grey_400"/>

            <LinearLayout
                android:id="@+id/btnChangeUsername"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingHorizontal="24dp"
                android:paddingVertical="4dp"
                android:background="@drawable/btn_bg_selector">

                <ImageView
                    android:layout_width="32dp"
                    android:layout_height="32dp"
                    android:layout_margin="8dp"
                    android:src="@drawable/ic_pen"
                    />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/change_username"
                    android:layout_gravity="center_vertical"
                    android:textColor="@color/black"
                    android:textSize="16sp"
                    android:fontFamily="@font/montserrat"
                    android:paddingStart="8dp"/>

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/md_grey_400" />
            <LinearLayout
                android:id="@+id/btnSignOut"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingHorizontal="24dp"
                android:paddingVertical="4dp"
                android:background="@drawable/btn_bg_selector">

                <ImageView
                    android:layout_width="32dp"
                    android:layout_height="32dp"
                    android:layout_margin="8dp"
                    android:src="@drawable/ic_sign_out"
                    />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/sign_out"
                    android:layout_gravity="center_vertical"
                    android:textColor="@color/black"
                    android:textSize="16sp"
                    android:fontFamily="@font/montserrat"
                    android:paddingStart="8dp"/>

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/md_grey_400" />
            <LinearLayout
                android:id="@+id/btnDeleteAccount"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingHorizontal="24dp"
                android:paddingVertical="4dp"
                android:background="@drawable/btn_delete_bg_selector">

                <ImageView
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:layout_margin="8dp"
                    android:src="@drawable/ic_cross_red"
                    />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/delete_account"
                    android:layout_gravity="center_vertical"
                    android:textColor="@color/red"
                    android:textSize="16sp"
                    android:fontFamily="@font/montserrat"
                    android:paddingStart="8dp"/>

            </LinearLayout>
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/md_grey_400" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="16dp"
                android:gravity="center"
                android:text="2024 © yamanf"/>
        </LinearLayout>
        </LinearLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>