<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.auth.login.LoginFragment">

        <TextView
            android:id="@+id/tvWelcomeBack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins"
            android:text="@string/hello_welcome_back"
            android:textSize="24sp"
            android:textColor="@color/black"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="30dp"
            android:layout_marginStart="20dp"/>

        <TextView
            android:id="@+id/tvHello"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins"
            android:text="Hello again, You’ve been missed!"
            android:textSize="13sp"
            app:layout_constraintTop_toBottomOf="@+id/tvWelcomeBack"
            app:layout_constraintStart_toStartOf="@+id/tvWelcomeBack"/>


    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
        android:id="@+id/emailTextField"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/e_mail_address"
        app:layout_constraintTop_toBottomOf="@+id/tvHello"
        app:layout_constraintStart_toStartOf="@id/tvHello"
        app:boxCornerRadiusTopStart="15dp"
        app:boxCornerRadiusBottomEnd="15dp"
        android:layout_marginTop="30dp"
        android:layout_marginHorizontal="20dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:textSize="15sp"
            android:fontFamily="@font/poppins"/>

    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
        android:id="@+id/passwordTextField"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="Password"
        app:passwordToggleEnabled="true"
        app:passwordToggleTint="#B4B4B4"
        app:layout_constraintTop_toBottomOf="@+id/emailTextField"
        android:layout_marginTop="20dp"
        android:layout_marginHorizontal="20dp"
        app:boxCornerRadiusTopStart="15dp"
        app:boxCornerRadiusBottomEnd="15dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:fontFamily="@font/poppins"
            android:textSize="15sp"/>
    </com.google.android.material.textfield.TextInputLayout>


            <CheckBox
                android:id="@+id/cbRemember"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                app:layout_constraintTop_toBottomOf="@+id/passwordTextField"
                app:layout_constraintStart_toStartOf="@+id/passwordTextField"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/remember_me"
                android:fontFamily="@font/poppins"
                android:textSize="13sp"
                app:layout_constraintTop_toTopOf="@+id/cbRemember"
                app:layout_constraintStart_toEndOf="@+id/cbRemember"
                app:layout_constraintBottom_toBottomOf="@id/cbRemember"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/forgot_password"
                app:layout_constraintTop_toTopOf="@+id/cbRemember"
                app:layout_constraintBottom_toBottomOf="@id/cbRemember"
                app:layout_constraintEnd_toEndOf="@id/passwordTextField"
                android:textSize="13sp"
                android:textColor="#FF0000"
                />

    <Button
        android:id="@+id/btnLogin"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
        android:backgroundTint="@color/green"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:textColor="@color/white"
        android:fontFamily="@font/poppins"
        app:layout_constraintTop_toBottomOf="@id/cbRemember"
        android:layout_marginHorizontal="20dp" />

    <LinearLayout
        android:id="@+id/llOrLoginWith"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@+id/btnLogin"
        app:layout_constraintEnd_toStartOf="@+id/btnLogin"
        app:layout_constraintEnd_toEndOf="@id/btnLogin"
        android:gravity="center"
        android:foregroundGravity="center"
        android:layout_marginVertical="30dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Or login with"
            android:fontFamily="@font/poppins"
            android:textSize="15sp"
            android:textColor="@color/black"
            android:layout_marginHorizontal="15dp"/>

        <com.google.android.material.button.MaterialButton
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            app:icon="@drawable/google_icon"
            app:iconSize="32dp"
            app:iconTint="@color/black"
            android:text="Login with Google!"
            android:textColor="@color/black"
            android:layout_marginTop="10dp"
            app:layout_constraintTop_toBottomOf="@id/llOrLoginWith"
            />

    </LinearLayout>



    <LinearLayout
        android:id="@+id/llBottom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginHorizontal="20dp"
        android:layout_marginBottom="35dp"
        android:gravity="center">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins"
            android:textSize="15sp"
            android:text="@string/don_t_have_an_account"/>

        <Space
            android:layout_width="10dp"
            android:layout_height="0dp" />
        <TextView
            android:id="@+id/tvRegisterText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins"
            android:textSize="15sp"
            android:textColor="@color/green"
            android:text="@string/register"/>
    </LinearLayout>

    <com.google.android.gms.common.SignInButton
        android:id="@+id/sign_in_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/btnLogin"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>


</androidx.constraintlayout.widget.ConstraintLayout>